src/elements/content-sidebar/activity-feed/version/Version.scss
@import '../../../common/variables';

.be {
    .bcs-Version {
        display: flex;
        align-items: center;
        justify-content: space-between;
        margin: 0 $sidebarActivityFeedSpacingHorizontal;
        padding: 9px;
        color: $bdl-green-light;
        background-color: fade-out($bdl-green-light, .9);
        border-radius: 4px;
    }

    .bcs-Version-actions {
        display: flex;
        justify-content: flex-end;
    }

    .bcs-Version-info {
        flex: none;
        width: 16px;
        height: 16px;

        path {
            fill: $bdl-green-light;
        }
    }

    .bcs-Version-message {
        min-width: 0;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    .bcs-Version-range {
        white-space: nowrap;
    }
}

